Move custom hooks to separate files and refactor general code

--- a/src/template.html
+++ b/src/template.html
@@ -5,7 +5,8 @@
 </head>
 
 <body>
-    <div id="app" server-api="http://localhost:4444"></div>
+    <!-- Note: the app's router add paths that start with "/" -->
+    <div id="file-explorer" server-api="http://localhost:4444"></div>
 </body>
 
 </html>
