Add directory creation

--- a/src/template.html
+++ b/src/template.html
@@ -6,7 +6,7 @@
 
 <body>
     <!-- Note: the app's router add paths that start with "/" -->
-    <div id="file-explorer" server-api="http://localhost:4444/files"></div>
+    <div id="file-explorer" server-api="http://localhost:4444"></div>
 </body>
 
 </html>
